<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.dimikatseli.usercoordinates.MainActivity">


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText

            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/latitude"
            android:layout_alignStart="@+id/latitude"
            android:layout_below="@+id/latitude"
            android:layout_marginTop="57dp"
            android:ems="10"
            android:hint="@string/longtitude_edt_txt"
            android:inputType="numberDecimal" />

        <EditText

            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="37dp"
            android:layout_marginRight="37dp"
            android:layout_marginTop="51dp"
            android:layout_toLeftOf="@+id/sec_act_button"
            android:layout_toStartOf="@+id/sec_act_button"
            android:ems="10"
            android:hint="@string/latitude_edt_txt"
            android:inputType="numberDecimal" />

        <Button

            android:id="@+id/sec_act_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/sec_act_button" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/longitude"
            android:layout_alignRight="@+id/longitude"
            android:layout_below="@+id/longitude"
            android:layout_marginEnd="57dp"
            android:layout_marginRight="57dp"
            android:layout_marginTop="73dp"
            android:text="@string/save_button" />

        <TextView
            android:id="@+id/cordinates_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/latitude"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/latitude"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="23dp"
            android:text="@string/cordinates_txt" />

        <EditText
            android:id="@+id/ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/longitude"
            android:layout_alignStart="@+id/longitude"
            android:layout_below="@+id/longitude"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Id" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/save_button"
            android:layout_alignStart="@+id/save_button"
            android:layout_below="@+id/save_button"
            android:layout_marginTop="27dp"
            android:text="@string/delete_button"
             />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
